# gitlab-timereport

./: .gitignore  Cargo.toml  README.md  gitlab_query.graphql  gitlab_schema.json  group_query.graphql  issues_query.graphql  merge_requests_query.graphql  projects_query.graphql  users_query.graphql
reports/: time_by_user_and_milestone.sql  times_by_user_and_issue.sql
src/: cli_args.rs  main.rs
src/lib/: db.rs  mod.rs  model.rs
src/lib/graphql/: group.rs  issues.rs  merge_requests.rs  mod.rs  projects.rs  users.rs
